JS: use Double.valueof rather than boxing a new Double()
Findbugs suggestion, only used as the key into a map anyway, fine to reuse
a cached Double value.

Signed-off-by: Harvey Harrison <harvey.harrison@gmail.com>